[gd_scene load_steps=4 format=3 uid="uid://dg2ra8kauhj1m"]

[ext_resource type="Script" uid="uid://84fj0c68b2bh" path="res://addons/VolumeControl/volume_control.gd" id="1_qhenx"]
[ext_resource type="Texture2D" uid="uid://c6rcswsgkicr5" path="res://addons/VolumeControl/sound_on_icon.png" id="2_mldft"]
[ext_resource type="Texture2D" uid="uid://bb0v04b56hrde" path="res://addons/VolumeControl/sound_off_icon.png" id="3_o65l7"]

[node name="VolumeControl" type="GridContainer"]
offset_right = 261.0
offset_bottom = 82.0
size_flags_horizontal = 4
theme_override_constants/h_separation = 9
theme_override_constants/v_separation = 0
columns = 4
script = ExtResource("1_qhenx")
sound_on_texture = ExtResource("2_mldft")
sound_off_texture = ExtResource("3_o65l7")
labelText = "Master"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_mldft")
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.1

[node name="MuteButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Mute"

[node name="SfxTest" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Sfx"
